# miappe-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: demo.ipynb  facade_demo.ipynb  index.md  isa_demo.ipynb
docs/api/: cli.md  rest.md  schema-specs.md
docs/architecture/: combined.md  comparison.md  diagrams.md  isa-miappe-comparison.md  isa.md  miappe.md  model-factory.md  overview.md  schema-specs.md
docs/development/: contributing.md  testing.md
docs/discussion/: comparison.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: spec-merge.md
docs/profiles/: combined.md  isa.md  jerm.md  miappe.md
examples/isa-miappe-combined/1.0/: maize-phenomics-study.yaml
examples/isa-miappe-combined/2.0/: maize-phenomics-study.yaml
examples/isa/1.0/: metabolomics-study.yaml
examples/miappe/1.1/: wheat-drought-study.yaml
src/metaseed/: __init__.py  _version.py  facade.py
src/metaseed/api/: __init__.py
src/metaseed/cli/: __init__.py  output.py
src/metaseed/core/: __init__.py  config.py
src/metaseed/examples/cropxr-phenotyping/0.0.5/: potato-field-trial.yaml
src/metaseed/examples/cropxr/1.0/: tomato-drought-rnaseq.yaml
src/metaseed/examples/darwin-core/1.0/: forest-biodiversity-survey.yaml
src/metaseed/examples/dissco/0.4/: herbarium-specimen.yaml
src/metaseed/examples/ena/1.0/: arabidopsis-drought-rnaseq.yaml
src/metaseed/examples/isa-miappe-combined/1.0/: maize-phenomics-study.yaml
src/metaseed/examples/isa-miappe-combined/2.0/: maize-phenomics-study.yaml
src/metaseed/examples/isa/1.0/: metabolomics-study.yaml
src/metaseed/examples/miappe/1.1/: wheat-drought-study.yaml
src/metaseed/examples/miappe/1.2/: wheat-drought-study.yaml
src/metaseed/importers/: __init__.py  isa.py
src/metaseed/models/: __init__.py  factory.py  types.py
src/metaseed/profiles/: __init__.py  factory.py
src/metaseed/specs/: __init__.py  combined_v1.0.yaml  combined_v2.0.yaml  isa-miappe-combined_v1.0.yaml  isa-miappe-combined_v2.0.yaml  isa_v1.0.yaml  loader.py  miappe_v1.1.yaml  schema.py
src/metaseed/specs/cropxr-phenotyping/0.0.5/: profile.yaml
src/metaseed/specs/cropxr-sequencing/0.0.7/: profile.yaml
src/metaseed/specs/dissco/0.4/: profile.yaml
src/metaseed/specs/isa-miappe-combined/1.0/: profile.yaml
src/metaseed/specs/isa-miappe-combined/2.0/: profile.yaml
src/metaseed/specs/isa/1.0/: profile.yaml
src/metaseed/specs/jerm/1.0/: profile.yaml
src/metaseed/specs/merge/: __init__.py  comparator.py  merger.py  models.py  reports.py  strategies.py  visualizer.py
src/metaseed/specs/miappe/1.1/: profile.yaml
src/metaseed/specs/miappe/1.2/: profile.yaml
src/metaseed/storage/: __init__.py  base.py  json_backend.py  yaml_backend.py
src/metaseed/ui/: __init__.py  app.py  helpers.py  routes.py  spec_builder_helpers.py  spec_builder_routes.py  spec_builder_state.py  state.py
src/metaseed/ui/routes/: __init__.py  api.py  examples.py  merge.py  validation.py
src/metaseed/ui/services/: __init__.py  graph.py
src/metaseed/ui/static/css/: style.css
src/metaseed/ui/static/js/: app.js  erd-common.js  spec-builder.js
src/metaseed/ui/templates/: base.html  index.html
src/metaseed/ui/templates/components/: lookup_modal.html  notification.html  validation_result.html
src/metaseed/ui/templates/merge/: index.html
src/metaseed/ui/templates/partials/: form.html  form_sections.html  form_success.html  inline_table_row.html  nested_form.html  profile_select.html  table.html  table_row.html
src/metaseed/ui/templates/spec_builder/: base.html  start.html
src/metaseed/ui/templates/spec_builder/partials/: entities_list.html  entity_editor.html  field_form.html  profile_metadata_form.html  save_result.html  validation_rule_form.html  (+2 more)
src/metaseed/validators/: __init__.py  base.py  dataset.py  engine.py  rules.py
src/miappe_api/: __init__.py  facade.py
src/miappe_api/api/: __init__.py
src/miappe_api/cli/: __init__.py
src/miappe_api/core/: __init__.py  config.py  exceptions.py
src/miappe_api/importers/: __init__.py  isa.py
src/miappe_api/models/: __init__.py  factory.py  registry.py
src/miappe_api/specs/: __init__.py  combined_v1.0.yaml  combined_v2.0.yaml  loader.py  miappe_v1.1.yaml  schema.py
src/miappe_api/specs/v1_1/: __init__.py  biological_material.yaml  data_file.yaml  environment.yaml  event.yaml  factor.yaml  factor_value.yaml  investigation.yaml  location.yaml  material_source.yaml  observation_unit.yaml  observed_variable.yaml  person.yaml  sample.yaml  study.yaml
src/miappe_api/ui/: app.py  helpers.py  routes.py  state.py
src/miappe_api/ui/static/css/: style.css
src/miappe_api/ui/static/js/: app.js
src/miappe_api/ui/templates/: base.html  index.html
src/miappe_api/ui/templates/components/: breadcrumb.html
src/miappe_api/ui/templates/partials/: field.html  form.html  nested_form.html  table.html  table_row.html  tree_node.html
src/miappe_api/validators/: engine.py  rules.py
tests/: __init__.py  test_cli_commands.py  test_examples.py  test_facade.py  test_profiles.py  test_version.py
tests/fixtures/isa_examples/: BII-I-1.json  MIAPPE_Checklist_Data_Model.tsv  a_MTBLS1_metabolite_profiling.txt  i_MTBLS1.txt  i_MTBLS528.txt  s_MTBLS1.txt  s_MTBLS528.txt
tests/test_api/: test_endpoints.py
tests/test_cli/: test_check.py  test_commands.py
tests/test_importers/: test_isa.py
tests/test_models/: __init__.py  test_factory.py  test_registry.py  test_types.py
tests/test_specs/: __init__.py  test_entities.py  test_loader.py  test_schema.py
tests/test_specs/test_merge/: __init__.py  test_comparator.py  test_merger.py  test_strategies.py  test_visualizer.py
tests/test_storage/: test_json.py  test_yaml.py
tests/test_ui/: examples.py  test_bulk_edit.py  test_helpers.py  test_htmx.py  test_lookup.py  test_nicegui.py  test_selenium.py  test_spec_builder.py  test_spec_builder_selenium.py  test_validation_selenium.py
tests/test_validators/: test_dataset.py  test_engine.py  test_rules.py
