[project]
name = "metaseed"
dynamic = ["version"]
description = "Tools for creating, editing, and validating experimental metadata following MIAPPE standards"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sdrwacker" }]
keywords = ["miappe", "phenotyping", "metadata", "ontology", "ppeo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "typer>=0.12",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "mkdocs-material>=9.7.6",
    "isatools>=0.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "jupyter>=1.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.8",
    "mkdocs-panzoom-plugin>=0.4",
]

[project.scripts]
metaseed = "metaseed.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/metaseed/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/metaseed"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "RUF",    # ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "TRY",    # tryceratops
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (FastAPI uses this)
    "SIM117",  # nested with statements (normal for declarative UI code)
    "S101",    # assert used (fine in tests)
    "PLR0913", # too many arguments (some functions need them)
    "PLR2004", # magic value comparison (too noisy)
    "TRY003",  # long exception messages (acceptable)
    "RUF012",  # mutable class attributes (pydantic models use this)
    "PLC0415", # import not at top level (lazy imports are intentional for perf/circular deps)
    "PLR0912", # too many branches (some complex functions are acceptable)
    "PLR0915", # too many statements (some complex functions are acceptable)
    "PLR0911", # too many return statements (validation functions need this)
    "TCH002",  # move import to type-checking block (not always desirable)
    "TCH003",  # move stdlib import to type-checking block (not always desirable)
    "PLW0603", # global statement (needed for module-level state)
    "TRY300",  # return in try block (acceptable pattern)
    "PLW2901", # loop variable overwritten (intentional type conversion)
    "PERF401", # list.extend vs append (marginal perf, less readable)
    "RUF005",  # iterable unpacking (less readable in some cases)
    "RET504",  # unnecessary assignment before return (aids debugging)
    "SIM103",  # return condition directly (less readable for complex conditions)
    "PTH123",  # Path.open vs open (both are fine)
    "TRY301",  # raise in try block (acceptable for CLI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments in fixtures
    "PLR2004", # magic values in tests
]
"src/metaseed/facade.py" = [
    "T201",    # print used for CLI help output
]
"src/metaseed/cli/**/*.py" = [
    "T201",    # print used for CLI output
    "TRY301",  # raise in try block is acceptable for CLI
]
"src/metaseed/validators/**/*.py" = [
    "S110",    # try-except-pass is intentional for graceful degradation
    "S112",    # try-except-continue is intentional for validation loops
]
"src/metaseed/ui/state.py" = [
    "S110",    # try-except-pass is intentional for safe fallback
]

[tool.ruff.lint.isort]
known-first-party = ["metaseed"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = ["tests/", "docs/"]

[[tool.mypy.overrides]]
module = [
    "isatools.*",
    "openpyxl.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "ui: marks tests as UI tests",
]

[tool.coverage.run]
source = ["src/metaseed"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.10",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3",
    "selenium>=4.20",
]
